# pedro-agentware

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  audit.go  audit_test.go  docker-compose.yml  go.mod  middleware.go  policy.go  types.go
.github/workflows/: ci-go.yaml  ci-python.yaml  ci.yml  go-test.yml  python-test.yml  release.yml  typescript-test.yml
.opencode/plans/: adapters.md
business/: AGENT_FRAMEWORK_DESIGN.md  CODE_EXTRACTION_PLAN.md  ENGINEERING_DESIGN.md  EXISTING_PATTERNS.md  MILESTONE_DETAILS.md  PRD.md  SDK_PLAN.md
docker/kitaru-mock/: Dockerfile  server.py
docker/websearch-agent/: Dockerfile  agent.py
docs/: engineering-design.md
docs/go/: README.md
docs/python/: README.md
docs/typescript/: README.md
example/: main.go
executor/: dispatcher.go  executor.go  executor_test.go  inference.go
format/: direct_bridge.go  direct_bridge_test.go  formatter.go  hybrid_bridge.go
go/: .golangci.yml  go.mod
go/agent/: doc.go  graph.go  node.go  runner.go  state.go
go/executor/: dispatcher.go  executor.go  executor_test.go  inference.go
go/jobs/: errors.go  manager.go
go/llm/: compact.go  compact_test.go  context_window.go  context_window_test.go  factory.go  request.go  request_test.go  response.go  server.go  tokens_test.go
go/llmcontext/: compaction.go  compaction_test.go  entry.go  llmcontext_test.go  manager.go
go/middleware/: middleware.go  middleware_test.go  policy.go  policy_test.go  types_test.go
go/prompts/: generator.go  generator_test.go  schema.go  tool_section.go
go/toolformat/: formatter.go  formatter_test.go  generic.go  llama.go  minimax.go  mistral.go  nemotron.go  qwen.go  selector.go
go/tools/: executor.go  registry.go  (+4 more)
issues/: agent-framework-integrations.md
jobs/: job.go  job_test.go  manager_test.go
llm/: backend.go  response_test.go  tokens.go
llmcontext/: entry.go  llmcontext_test.go  manager.go
middleware/: .gitignore  README.md  audit.go  condition.go  coverage.out  go.mod  middleware.go  middleware_test.go  policy_loader.go  policy_loader_test.go  policy_test.go  ratelimit.go  types.go  types_aliases.go  types_test.go
middleware_py/: __init__.py  audit.py  langgraph.py  middleware.py  policy.py  policy_loader.py  pyproject.toml  types.py  windowmanager.py
middleware_py/tests/: audit_test.py  langgraph_test.py  middleware_test.py  policy_loader_test.py  policy_test.py  types_test.py  windowmanager_test.py
moderation/: types.go
prompts/: generator.go  generator_test.go  schema.go  tool_section.go
python/: pyproject.toml
python/adapters/: README.md  __init__.py  base.py  prompt.md
python/adapters/hermes/: __init__.py  adapter.py  client.py  pyproject.toml
python/adapters/kitaru/: __init__.py  adapter.py  client.py  pyproject.toml
python/adapters/pydantic/: __init__.py  adapter.py  client.py  pyproject.toml
python/src/pedro_agentware/: __init__.py
python/src/pedro_agentware/executor/: __init__.py  executor.py
python/src/pedro_agentware/jobs/: __init__.py  job.py  manager.py
python/src/pedro_agentware/llm/: __init__.py  backend.py  request.py  response.py
python/src/pedro_agentware/llmcontext/: __init__.py  context_window.py  manager.py  strategies.py
python/src/pedro_agentware/middleware/: __init__.py  audit.py  inference.py  middleware.py  policy.py  types.py
python/src/pedro_agentware/middleware/guardrails/: error_tracker.py  nudge.py  response_validator.py  step_enforcer.py
python/src/pedro_agentware/prompts/: __init__.py  generator.py
python/src/pedro_agentware/toolformat/: __init__.py  formatter.py
python/src/pedro_agentware/tools/: __init__.py  registry.py  tool.py
python/tests/: conftest.py  context_window_test.py  guardrails_error_tracker_test.py  guardrails_nudge_test.py  guardrails_response_validator_test.py  guardrails_step_enforcer_test.py  inference_test.py  message_types_test.py  middleware_test.py  strategies_test.py  tools_test.py
python/tests/adapters/: __init__.py  test_hermes.py  test_kitaru.py  test_pydantic.py
python/tests/adapters/integration/: conftest.py
tests/: langgraph_test.py
toolformat/: formatter.go  formatter_test.go  generic.go  llama.go  mistral.go  qwen.go
tools/: tool_test.go
typescript/: .eslintrc.json  jest.config.js  package-lock.json  package.json  tsconfig.json
(+111 files in other folders)
